# Multi-Mouse

./: .gitattributes  .gitignore  LICENSE  README.md
addons/multi_mouse/: README.md  multi_mouse_manager.gd  plugin.cfg  plugin.gd
demo/: project.godot
demo/pong/: pong.gd
demo/scenes/: demo.tscn
demo/scripts/: demo.gd
demo/simple/: README.md  demo.gd  demo.tscn
demo/slime/: README.md  slime_demo.gd  slime_demo.tscn
scripts/: build_linux.sh  build_windows.ps1
src/: CMakeLists.txt  README.md  input_events.cpp  input_events.h  multi_mouse_backend.cpp  multi_mouse_backend.h  multi_mouse_server.cpp  multi_mouse_server.h  register_types.cpp  register_types.h
src/platform/linux/: multi_mouse_backend_linux.cpp  multi_mouse_backend_linux.h
src/platform/windows/: multi_mouse_backend_windows.cpp  multi_mouse_backend_windows.h
